--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
+              <a class="extra" href="/about/">about</a>
+              <a class="extra" href="/projects/">projects</a>
             </div>
 
                 {{ content }}
@@ -34,7 +36,7 @@
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
+                  <a href="http://github.com/yourusername/">github.com/JustinBeckwith</a><br />
                   <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
                 </p>
               </div>
