--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="/libs/prism/prism.css">
-        <link rel="stylesheet" href="/css/main.css">
-    </head>
-    <body>
+		<head>
+				<meta charset="utf-8">
+				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+				<title>{{ page.title }} // Justin Beckwith</title>
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<link rel="alternate" type="application/rss+xml" title="Justin Beckwith // 53 Bytes" href="feed/" />
+				<link rel="stylesheet" href="/libs/prism/prism.css">
+				<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
+				<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-responsive.min.css">
+				<link rel="stylesheet" href="/css/main.css">
+		</head>
+		<body>
+			 <div class="navbar navbar-inverse">
+					<div class="navbar-inner">
+						<div class="container">
+							<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<div class="nav-collapse collapse">
+								<ul class="nav">
+									<li><a href="/">Blog</a></li>
+									<li><a href="/projects/">Projects</a></li>
+									<li><a href="/about/">About</a></li>
+									<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
+									<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="logo">
+					<div class="logo-inner">
+						<img src="/images/header.png" alt="Justin Beckwith // 53 Bytes">
+						<ul>
+							<li><a href="/feed/" title="RSS" class="rss"></a></li>
+							<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
+						</ul>
+						<div style="clear:both"></div>
+					</div>	
+				</div>
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-              <a class="extra" href="/about/">about</a>
-              <a class="extra" href="/projects/">projects</a>
-            </div>
-
-                {{ content }}
-
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/JustinBeckwith</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
-        <script src="/libs/prism/prism.js"></script>
-    </body>
+				
+				<div id="content" class="container">
+					{{ content }}
+				</div>
+				<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
+				<script src="/libs/prism/prism.js"></script>
+				<script src="/libs/prism/prism.cs.js"></script>
+				<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+		</body>
 </html>
