--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,10 @@
 					</div>	
 				</div>
 				{{ content }}
+				<footer>
+					<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
+					<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
+				</footer>
 				<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
 				<script src="/libs/prism/prism.js"></script>
 				<script src="/libs/prism/prism.cs.js"></script>
