--- a/_includes/post-comments.html
+++ b/_includes/post-comments.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread">
 </div>
 <script type="text/javascript">
-	//var disqus_developer = 1;
+	var disqus_developer = 1;
 	var disqus_shortname = '53bytes';
 	(function() {
 		var dsq = document.createElement('script');
@@ -11,8 +11,3 @@
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
 </script>
-<noscript>
-	Please enable JavaScript to view the
-	<a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
