added disqus count to details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,5 +54,14 @@
 				<script src="/libs/prism/prism.js"></script>
 				<script src="/libs/prism/prism.cs.js"></script>
 				<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+				<script type="text/javascript">
+    				var disqus_shortname = '53bytes';
+    				(function () {
+				        var s = document.createElement('script'); s.async = true;
+				        s.type = 'text/javascript';
+				        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+				        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    				}());
+    			</script>
 		</body>
 </html>
