--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,8 +17,6 @@ layout: default
 		{{ content }}
 	</div>
 
-</div>
-
-<div class="container" id="main-content">
+	<div class="hrbar">&nbsp;</div>
 	{% include post-comments.html %}
 </div>
