disqus clean up

--- a/_includes/post-details.html
+++ b/_includes/post-details.html
@@ -4,6 +4,6 @@
 		Posted Under: <a href="/archive/#{{page.category}}">{{ post.category }}</a>
 	</span>
 	<span>
-		<a href="{{post.url}}#disqus_thread">ITS HAPPENNINGGGG</a>.
+		<a href="{{post.url}}#disqus_thread"></a>
 	</span>
 </div>
