added google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,13 +55,24 @@
 				<script src="/libs/prism/prism.cs.js"></script>
 				<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 				<script type="text/javascript">
-    				var disqus_shortname = '53bytes';
-    				(function() {
+					var disqus_shortname = '53bytes';
+					(function() {
 				        var s = document.createElement('script'); s.async = true;
 				        s.type = 'text/javascript';
 				        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
 				        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    				}());
-    			</script>
+					}());
+
+					var _gaq = _gaq || [];
+					_gaq.push(['_setAccount', 'UA-19818923-1']);
+					_gaq.push(['_trackPageview']);
+
+					(function() {
+						var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+						ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+						var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+					})();
+
+				</script>
 		</body>
 </html>
