added social links

--- a/_includes/post-details.html
+++ b/_includes/post-details.html
@@ -1,5 +1,7 @@
 <div class="post-details">
-	<span>{{ post.date | date_to_long_string }}</span>
+	<span>
+		{{ post.date | date_to_long_string }}
+	</span>
 	<span class="posted-under">
 		Posted Under: <a href="/archive/#{{page.category}}">{{ post.category }}</a>
 	</span>
