--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,69 +12,72 @@
 				<link rel="stylesheet" href="/css/main.css">
 		</head>
 		<body>
-			 <div class="navbar navbar-inverse">
-					<div class="navbar-inner">
-						<div class="container">
-							<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-							<div class="nav-collapse collapse">
-								<ul class="nav">
-									<li><a href="/">Blog</a></li>
-									<li><a href="/about/">About</a></li>
-									<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
-									<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
-									<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="nav-wrapper">
+				<nav>
+					<ul>
+						<li><a href="/">Blog</a></li>
+						<li><a href="/about/">About</a></li>
+						<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
+						<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
+						<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
+					</ul>					
+				</nav>
+			</div>
 				
-				<div class="logo">
-					<div class="logo-inner">
-						<a href="/">
-							<img src="/images/header.png" alt="Justin Beckwith // 53 Bytes">
-						</a>
-						<div class="link-wrapper">
-							<ul>
-								<li><a href="/feed/" title="RSS" class="rss"></a></li>
-								<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
-							</ul>
-						</div>
-						<div style="clear:both"></div>
-					</div>	
-				</div>
-				{{ content }}
-				<footer>
-					<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
-					<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
-				</footer>
-				<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
-				<script src="/libs/prism/prism.js"></script>
-				<script src="/libs/prism/prism.cs.js"></script>
-				<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
-				<script type="text/javascript">
-					var disqus_shortname = '53bytes';
-					(function() {
-				        var s = document.createElement('script'); s.async = true;
-				        s.type = 'text/javascript';
-				        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-				        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-					}());
+			<div class="logo">
+				<div class="logo-inner">
+					<a href="/">
+						<img src="/images/header.png" alt="Justin Beckwith // 53 Bytes">
+					</a>
+					<div class="link-wrapper">
+						<ul>
+							<li><a href="/feed/" title="RSS" class="rss"></a></li>
+							<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
+						</ul>
+					</div>
+					<div style="clear:both"></div>
+				</div>	
+			</div>
+			{{ content }}
+			<footer>
+				<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
+				<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
+			</footer>
+			<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
+			<script src="/libs/prism/prism.js"></script>
+			<script src="/libs/prism/prism.cs.js"></script>
+			<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+			<script type="text/javascript">
+				var disqus_shortname = '53bytes';
+				(function() {
+					var s = document.createElement('script'); s.async = true;
+					s.type = 'text/javascript';
+					s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+					(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+				}());
 
-					var _gaq = _gaq || [];
-					_gaq.push(['_setAccount', 'UA-19818923-1']);
-					_gaq.push(['_trackPageview']);
+				var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', 'UA-19818923-1']);
+				_gaq.push(['_trackPageview']);
 
-					(function() {
-						var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-						ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-						var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-					})();
+				(function() {
+					var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+					ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+				})();
 
-				</script>
+				 (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+					var msViewportStyle = document.createElement("style");
+					msViewportStyle.appendChild(
+						document.createTextNode(
+							"@-ms-viewport{width:auto!important}"
+						)
+					);
+					document.getElementsByTagName("head")[0].
+						appendChild(msViewportStyle);
+				}
+
+
+			</script>
 		</body>
 </html>
