--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,13 @@
 /*
 /*****************************************************************************/
 
+webkit-viewport {width:device-width}
+@-moz-viewport {width:device-width}
+@-ms-viewport {width:device-width}
+@-o-viewport {width:device-width}
+@viewport {width:device-width}
+
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -81,45 +88,51 @@ footer a:hover {
 
 
 
-.navbar {
-	box-shadow: 0px 10px 5px -6px #333;
+.nav-wrapper {
+	box-shadow: 0px 10px 5px -6px #333;	
+	background-color: #1b1b1b;
+	margin-bottom: 10px;
 	margin-left: -10px;
 	margin-right: -10px;
-	background-color: #1b1b1b;
 }
 
-.nav :hover {
-	color: #CCC;
+nav {
+	max-width: 1080px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+nav ul {
+	list-style-type: none;
+	margin-left: 0px;
+}
+
+nav ul li {
+	display: inline-block;	
+}
+
+nav ul li a {
+	text-transform: uppercase;	
+	color: #3FAEA5;
+	padding: 10px 17px 10px 17px;		
+	display: inline-block;
+}
+
+nav ul li a:hover {
+	text-decoration: none;
+	color: #FCFCFC;
 	background-color: #3FAEA5;
 	box-shadow: 0px 4px 2px 0px #3FAEA5;
 }
 
-.navbar-inverse .nav>li>a {
-	text-transform: uppercase;
-	color: #3FAEA5;
-}
-
-@media (max-width: 979px) {
-	.navbar-inverse .nav-collapse .nav>li>a, .navbar-inverse .nav-collapse .dropdown-menu a {
-		color: #3FAEA5;
+/* hide social media links in navbar when space constrained */
+@media (max-width: 475px) {
+	nav ul li:nth-last-child(1) {
+		display: none;
 	}
-
-	.navbar-inverse .nav-collapse .nav > li > a:hover,
-	.navbar-inverse .nav-collapse .nav > li > a:focus,
-	.navbar-inverse .nav-collapse .dropdown-menu a:hover,
-	.navbar-inverse .nav-collapse .dropdown-menu a:focus {
-		color: #CCC;
-		background-color: #3FAEA5;
-		box-shadow: 0px 4px 2px 0px #3FAEA5;
+	nav ul li:nth-last-child(2) {
+		display: none;
 	}
-}
-
-.navbar-inner {
-	border-radius: 0px;
-	border: none;
-	max-width: 1080px;
-	margin-right: auto;
-	margin-left: auto;
 }
 
 .logo {
