--- a/css/main.css
+++ b/css/main.css
@@ -125,16 +125,6 @@ nav ul li a:hover {
 	box-shadow: 0px 4px 2px 0px #3FAEA5;
 }
 
-/* hide social media links in navbar when space constrained */
-@media (max-width: 475px) {
-	nav ul li:nth-last-child(1) {
-		display: none;
-	}
-	nav ul li:nth-last-child(2) {
-		display: none;
-	}
-}
-
 .logo {
 	background: url('/images/bk_dotted_big.png') 0 100% repeat-x;
 	padding-bottom: 10px;
@@ -192,6 +182,25 @@ nav ul li a:hover {
 		display: block;
 		margin: auto;
 	}
+
+	nav ul {
+		text-align: center;
+	}
+
+	nav ul li:nth-last-child(1) {
+		display: none;
+	}
+	nav ul li:nth-last-child(2) {
+		display: none;
+	}
+}
+
+/* override bootstrap default */
+@media(max-width: 767px) {
+	body {
+		padding-right: 0px;
+		padding-left: 0px;
+	}
 }
 
 .logo ul li a {
@@ -213,9 +222,6 @@ nav ul li a:hover {
 	background-position: 0 -49px;
 }
 
-@media(max-width: 520px) {
-
-}
 
 
 /*****************************************************************************/
