more navbar fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 				<title>{{ page.title }} // Justin Beckwith</title>
-				<meta name="viewport" content="width=525, initial-scale=1.0, maximum-scale=1.0" >
+				<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 				<link rel="alternate" type="application/rss+xml" title="Justin Beckwith // 53 Bytes" href="feed/" />
 				<link rel="stylesheet" href="/libs/prism/prism.css">
 				<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
