--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,18 +66,13 @@
 					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 				})();
 
-				 (navigator.userAgent.match(/IEMobile\/10\.0/)) {
-					var msViewportStyle = document.createElement("style");
-					msViewportStyle.appendChild(
-						document.createTextNode(
-							"@-ms-viewport{width:auto!important}"
-						)
-					);
-					document.getElementsByTagName("head")[0].
-						appendChild(msViewportStyle);
-				}
-
-
+				(function() {
+					if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+						var msViewportStyle = document.createElement("style");
+						msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
+				    	document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+					}
+				})();
 			</script>
 		</body>
 </html>
