--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ webkit-viewport {width:device-width}
 body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background: url('/images/bk_body.jpg');
-	overflow:hidden;
 }
 
 h1 {
@@ -90,11 +89,8 @@ footer a:hover {
 
 
 .nav-wrapper {
-	box-shadow: 0px 10px 5px -6px #333;	
-	background-color: #1b1b1b;
-	margin-bottom: 10px;
-	margin-left: -10px;
-	margin-right: -10px;
+	background-image: linear-gradient(#1b1b1b 40px, rgba(27,27,27,0));
+	height: 47px;
 }
 
 nav {
