--- a/css/main.css
+++ b/css/main.css
@@ -521,3 +521,22 @@ ul.posts span {
 	padding-top: 0px;
 	padding-bottom: 0px;
 }
+
+
+.embed-container { 
+	position: relative; 
+	padding-bottom: 56.25%; 
+	height: 0; 
+	overflow: hidden; 
+	max-width: 100%; 
+	height: auto; 
+	margin-bottom: 15px;
+} 
+
+.embed-container iframe, .embed-container object, .embed-container embed { 
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	width: 100%; 
+	height: 100%; 
+}
