--- a/css/main.css
+++ b/css/main.css
@@ -18,19 +18,21 @@ webkit-viewport {width:device-width}
 
 body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background: url('/images/bk_body.jpg');
+	background-color: #F0F0F0;
 }
 
 h1 {
 	text-transform: uppercase;
+	margin-top: 20px;
 }
 
-h4 a {
+h4, h1 a {
 	color: #333;
 }
 
-h4 a:hover {
+h4, h1 a:hover {
 	text-decoration: none;
+	color: #333;
 }
 
 h2 {
@@ -62,7 +64,7 @@ h5 {
 }
 
 footer {
-	background-color: #333;
+	background-color: #471949;
 	color: #F7F9F9;
 	text-align: center;
 	padding: 10px;
@@ -83,13 +85,14 @@ footer a:hover {
 	background: url('/images/bk_dotted_big.png') repeat-x center;
 	padding-top:10px;
 	padding-bottom:10px;
+	clear: both;
 }
 
 
 
 
 .nav-wrapper {
-	background-image: linear-gradient(#1b1b1b 40px, rgba(27,27,27,0));
+	background-image: linear-gradient(#333 40px, rgba(27,27,27,0));
 	height: 47px;
 }
 
@@ -110,7 +113,7 @@ nav ul li {
 
 nav ul li a {
 	text-transform: uppercase;	
-	color: #3FAEA5;
+	color: #9C9A05;
 	padding: 10px 17px 10px 17px;		
 	display: inline-block;
 }
@@ -118,20 +121,46 @@ nav ul li a {
 nav ul li a:hover {
 	text-decoration: none;
 	color: #FCFCFC;
-	background-color: #3FAEA5;
-	box-shadow: 0px 4px 2px 0px #3FAEA5;
+	background-color: #666;
+	box-shadow: 0px 4px 0px 0px #471949;
+}
+
+.topbar {
+	background-color: rgb(156, 154, 5); 
+	height: 10px;
 }
 
 .logo {
-	background: url('/images/bk_dotted_big.png') 0 100% repeat-x;
 	padding-bottom: 10px;
-	margin-bottom: 20px;
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: rgb(71, 25, 73);
 }
 
 .logo-inner {
 	max-width: 1060px;
 	margin-right: auto;
 	margin-left: auto;
+}
+
+.logo-title {
+	color: #F0F0F0;
+	float: left;
+	margin-top: 25px;
+	margin-left: 20px;
+	width: 700px;
+	font-family: 'Open Sans', 
+}
+
+.logo-name {
+	font-size: 30pt;
+	margin-bottom: 20px;
+}
+
+.logo-sub {
+	color: #AAA;
+	font-size: 15pt;
 }
 
 .link-wrapper {
@@ -159,6 +188,12 @@ nav ul li a:hover {
 	.link-wrapper {
 		width: 100%;
 		position: relative;
+	}
+
+	.logo-title {
+		width: 100%;
+		text-align: center;
+		margin-left: 0px;
 	}
 
 	.logo ul {
@@ -208,11 +243,13 @@ nav ul li a:hover {
 
 .logo ul li a.twitter {
 	background: url('/images/ico_social_twitter.png') 0 0 no-repeat;
+	background-position: 0 1px;
 	padding-right: 10px;
 }
 
 .logo ul li a.rss {
 	background: url('/images/ico_social_rss.png') 0 0 no-repeat;
+	background-position: 0 1px;
 }
 
 .logo ul li a.rss:hover, .logo ul li a.twitter:hover {
@@ -236,136 +273,13 @@ nav ul li a:hover {
 	border: 1px solid lime;
 }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-
-.excerpt {
-	background-color: #F7F9F9;
-	border: 4px solid #EEF2F2;
-	padding: 10px;
-	margin-bottom: 25px;
-	position: relative;
-}
-
-.excerpt h4 {
-	margin-bottom: 0px;
-	margin-top: 0px;
-}
-
-.excerpt .read-more {
-	bottom: -20px;
-	right: 25px;
-	position: absolute;
-}
-
-/*
- *	FEATURED POSTS
- */
-
-#featured-posts {
-	display: table-row;
-}
-
-#featured-posts .item {
-	float:left;
-	background:url(/images/featured_bubble.png) top right no-repeat;
-	position:relative;
-	max-width: 450px;
-	margin-bottom: 20px;
-}
-
-@media (min-width:979px) {
-	#featured-posts .item:first-child {
-		margin-right: 25px;
-	}
-}
-
-@media(max-width: 978px) {
-	#featured-posts .item {
-		margin-bottom: 75px;
-	}
-}
-
-#featured-posts .item h4 {
-	padding-right:80px;
-	padding-top:5px;
-	margin-top: 0px;
-	max-width: 358px;
-	min-height: 77px;
-	height:70px;
-	overflow: hidden;
-	line-height: 1;
-	text-transform: none;
-	font-size: 24px;
-}
-
-
-@media(max-width: 978px) {
-	#featured-posts .item h4 {
-		height: auto;
-	}
-}
-
-#featured-posts .item h4 a {
-	color:#333;
-}
-
-#featured-posts .item h4 a:hover {
-	text-decoration:none;
-	color:#399B8C;
-}
-
-.read-more {
-	display:block;
-	width:46px;
-	height:46px;
-	position:absolute;
-	text-indent:-9999px;
-	background:url(/images/bk_readmore.png) 0 -46px no-repeat;
-}
-
-
-#featured-posts .item .read-more {
-	right:30px;
-	bottom:-20px;
-}
-
-.read-more:hover {
-	background-position:0 0;
-}
-
-/*#featured-posts .item img {
-	margin-right:15px; 
-	border:10px solid #F7F9F9;
-	border-radius:8px;
-}*/
-
-.featured-content {
-	margin-right:15px; 
-	background-color: #F7F9F9;
-	border: 10px solid #EEF2F2;
-	border-radius:8px;
-	display: table-cell;
-}
-
-#featured-posts .item p {
-	margin-top: 15px;
-	margin-right: 10px;
-	margin-left: 10px;
-}
-
-
 #main-content {
 	max-width: 925px;
 }
 
 #content {
 	clear: both;
-	background-color: #F7F9F9;
-	border: 8px solid #EEF2F2;
+	background-color: #F0F0F0;
 	padding: 20px;
 	max-width: 1000px;
 	margin-bottom: 50px;
@@ -374,11 +288,13 @@ nav ul li a:hover {
 @media(max-width: 978px) {
 	#main-content {
 		max-width: 450px;
+		padding-right: 20px;
+		padding-left: 20px;
 	}
 }
 
 
-#content img {
+article img {
 	display: block;
 	padding-bottom: 20px;
 	padding-top: 20px;
@@ -477,9 +393,6 @@ ul.posts span {
 /*
 /*****************************************************************************/
 
-
-
-
 .meta {
 	text-transform: uppercase;
 	color: #666;
@@ -528,9 +441,11 @@ ul.posts span {
 	padding-bottom: 56.25%; 
 	height: 0; 
 	overflow: hidden; 
-	max-width: 100%; 
+	max-width: 650px; 
 	height: auto; 
-	margin-bottom: 15px;
+	margin-bottom: 30px;
+	margin-top: 30px;
+	text-align: center;
 } 
 
 .embed-container iframe, .embed-container object, .embed-container embed { 
@@ -540,3 +455,21 @@ ul.posts span {
 	width: 100%; 
 	height: 100%; 
 }
+
+.addthis_sharing_toolbox {
+	float:left;
+}
+
+.comment-count {
+	float:right;
+}
+
+.pagination {
+	text-align: right;
+}
+
+pre {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
