--- a/_includes/post-details.html
+++ b/_includes/post-details.html
@@ -6,6 +6,6 @@
 		Posted Under: <a href="/archive/#{{page.category}}">{{ post.category }}</a>
 	</span>
 	<span>
-		<a href="{{post.url}}#disqus_thread"></a>
+		<a href="{{post.url}}#disqus_thread">[0] comments</a>
 	</span>
 </div>
