--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html>
-		<head>
-				<meta charset="utf-8">
-				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-				<title>{{ page.title }} // Justin Beckwith</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-				<link rel="alternate" type="application/rss+xml" title="Justin Beckwith // 53 Bytes" href="feed/" />
-				<link rel="stylesheet" href="/libs/prism/prism.css">
-				<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
-				<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-responsive.min.css">
-				<link rel="stylesheet" href="/css/main.css">
-		</head>
-		<body>
-			<div class="nav-wrapper">
-				<nav>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>{{ page.title }} // Justin Beckwith</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+		<link rel="alternate" type="application/rss+xml" title="Justin Beckwith" href="feed/" />
+		<link rel="stylesheet" href="/libs/prism/prism.css">
+		<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-responsive.min.css">
+		<link rel="stylesheet" href="/css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
+
+	</head>
+	<body>
+		<div class="topbar"></div>
+		<div class="logo">
+			<div class="logo-inner">
+				<a href="/">
+					<img src="/images/head.png" alt="Justin Beckwith">
+				</a>
+				<div class="logo-title">
+					<div class="logo-name">Justin Beckwith</div>
+					<div class="logo-sub">I'm a program manager at Microsoft.  I'm trying to make building applications for the cloud just a little bit easier.</div>
+				</div>
+				<div class="link-wrapper">
 					<ul>
-						<li><a href="/">Blog</a></li>
-						<li><a href="/about/">About</a></li>
-						<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
-						<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
-						<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
-					</ul>					
-				</nav>
-			</div>
-				
-			<div class="logo">
-				<div class="logo-inner">
-					<a href="/">
-						<img src="/images/header.png" alt="Justin Beckwith // 53 Bytes">
-					</a>
-					<div class="link-wrapper">
-						<ul>
-							<li><a href="/feed/" title="RSS" class="rss"></a></li>
-							<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
-						</ul>
-					</div>
-					<div style="clear:both"></div>
-				</div>	
-			</div>
+						<li><a href="/feed/" title="RSS" class="rss"></a></li>
+						<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
+					</ul>
+				</div>
+				<div style="clear:both"></div>
+			</div>	
+		</div>
+
+		<div class="nav-wrapper">
+			<nav>
+				<ul>
+					<li><a href="/">Blog</a></li>
+					<li><a href="/about/">About</a></li>
+					<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
+					<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
+					<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
+				</ul>					
+			</nav>
+		</div>
+		<div class="container" id="main-content">
 			{{ content }}
-			<footer>
-				<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
-				<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
-			</footer>
-			<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
-			<script src="/libs/prism/prism.js"></script>
-			<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
-			<script type="text/javascript">
-				var disqus_shortname = '53bytes';
-				(function() {
-					var s = document.createElement('script'); s.async = true;
-					s.type = 'text/javascript';
-					s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-					(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-				}());
+		</div>
+		<footer>
+			<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
+			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
+		</footer>
+		<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
+		<script src="/libs/prism/prism.js"></script>
+		<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54d6a7e972035c38" async="async"></script>
 
-				var _gaq = _gaq || [];
-				_gaq.push(['_setAccount', 'UA-19818923-1']);
-				_gaq.push(['_trackPageview']);
+		<script type="text/javascript">
+			var disqus_shortname = '53bytes';
+			(function() {
+				var s = document.createElement('script'); s.async = true;
+				s.type = 'text/javascript';
+				s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+				(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+			}());
 
-				(function() {
-					var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-					ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-				})();
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-19818923-1']);
+			_gaq.push(['_trackPageview']);
 
-				(function() {
-					if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
-						var msViewportStyle = document.createElement("style");
-						msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
-				    	document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
-					}
-				})();
-			</script>
-		</body>
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
+			(function() {
+				if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+					var msViewportStyle = document.createElement("style");
+					msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
+			    	document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+				}
+			})();
+		</script>
+	</body>
 </html>
