--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,44 +2,14 @@
 layout: default
 ---
 
-<div id="content" class="container">
-
-	<h2>
-		{{ page.title }}
-	</h2>
-
+<article>
+	<h1>{{ page.title }}</h1>
 	{% assign post=page %}
-	<div class="hrbar">&nbsp;</div>
 	{% include post-details.html %}
 	<div class="hrbar">&nbsp;</div>
-
-	<div class="post">
-		{{ content }}
-	</div>
-
+	<div class="post">{{ content }}</div>
 	<div class="hrbar">&nbsp;</div>
-
-	<div class="social">
-
-		<!-- twitter -->
-		<div>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-via="JustinBeckwith">Tweet</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		</div>
-
-		<!-- reddit -->
-		<div>
-			<a href="http://www.reddit.com/submit" onclick="window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> <img src="http://www.reddit.com/static/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
-		</div>
-
-		<!-- hacker news -->
-		<div>
-			<a href="https://news.ycombinator.com/submit" class="hn-button" data-count="horizontal">Vote on Hacker News</a>
-			<script type="text/javascript">var HN=[];HN.factory=function(e){return function(){HN.push([e].concat(Array.prototype.slice.call(arguments,0)))};},HN.on=HN.factory("on"),HN.once=HN.factory("once"),HN.off=HN.factory("off"),HN.emit=HN.factory("emit"),HN.load=function(){var e="hn-button.js";if(document.getElementById(e))return;var t=document.createElement("script");t.id=e,t.src="//hn-button.herokuapp.com/hn-button.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)},HN.load();</script>
-		</div>
-	</div>
-	<div style="clear:both;"></div>
+	<div class="addthis_sharing_toolbox"></div>
 	<div class="hrbar">&nbsp;</div>
-
 	{% include post-comments.html %}
-</div>
+</article>
