--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ h4, h1 a:hover {
 
 h2 {
 	text-transform: uppercase;
+	margin-top: 40px;
 }
 
 /* smaller titles on the post page  in mobile view */
