--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 				</a>
 				<div class="logo-title">
 					<div class="logo-name">Justin Beckwith</div>
-					<div class="logo-sub">I'm a program manager at Microsoft.  I'm trying to make building applications for the cloud just a little bit easier.</div>
+					<div class="logo-sub">I make stuff for the web.  I'm trying to make building applications for the cloud just a little bit easier.</div>
 				</div>
 				<div class="link-wrapper">
 					<ul>
@@ -49,7 +49,7 @@
 			{{ content }}
 		</div>
 		<footer>
-			<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft.</div>
+			<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft or Google.</div>
 			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
 		</footer>
 		<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
