add depdenceny management and go post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,6 @@
 		<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-responsive.min.css">
 		<link rel="stylesheet" href="/css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
-
 	</head>
 	<body>
 		<div class="topbar"></div>
@@ -22,7 +21,7 @@
 				</a>
 				<div class="logo-title">
 					<div class="logo-name">Justin Beckwith</div>
-					<div class="logo-sub">I make stuff for the web.  I'm trying to make building applications for the cloud just a little bit easier.</div>
+					<div class="logo-sub">I make stuff at Google. I'm trying to make building applications for the cloud just a little bit easier.</div>
 				</div>
 				<div class="link-wrapper">
 					<ul>
@@ -31,7 +30,7 @@
 					</ul>
 				</div>
 				<div style="clear:both"></div>
-			</div>	
+			</div>
 		</div>
 
 		<div class="nav-wrapper">
@@ -42,7 +41,7 @@
 					<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
 					<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
 					<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
-				</ul>					
+				</ul>
 			</nav>
 		</div>
 		<div class="container" id="main-content">
@@ -52,7 +51,7 @@
 			<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft or Google.</div>
 			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
 		</footer>
-		<script src="/libs/jquery/jquery-2.0.2.min.js"></script>  
+		<script src="/libs/jquery/jquery-2.0.2.min.js"></script>
 		<script src="/libs/prism/prism.js"></script>
 		<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54d6a7e972035c38" async="async"></script>
