--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 					<li><a href="/about/">About</a></li>
 					<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
 					<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
-					<li><a href="hhttp://www.linkedin.com/in/beckwith">LinkedIn</a></li>
+					<li><a href="http://www.linkedin.com/in/beckwith">LinkedIn</a></li>
 				</ul>
 			</nav>
 		</div>
