fix: update code syntax highlighting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,9 @@
 		<title>{{ page.title }} // Justin Beckwith</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<link rel="alternate" type="application/rss+xml" title="Justin Beckwith" href="feed/" />
-		<link rel="stylesheet" href="/libs/prism/prism.css">
+		<link rel="stylesheet" href="/css/site.css">
 		<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/libs/bootstrap/css/bootstrap-responsive.min.css">
-		<link rel="stylesheet" href="/css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
@@ -52,7 +51,6 @@
 			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
 		</footer>
 		<script src="/libs/jquery/jquery-2.0.2.min.js"></script>
-		<script src="/libs/prism/prism.js"></script>
 		<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54d6a7e972035c38" async="async"></script>
 
