fix: remove addthis and use own social icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<link rel="alternate" type="application/rss+xml" title="Justin Beckwith" href="feed/" />
 		<link rel="stylesheet" href="/css/site.css">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="topbar"></div>
@@ -23,21 +23,20 @@
 				<div class="link-wrapper">
 					<ul>
 						<li><a href="/feed/" title="RSS" class="rss"></a></li>
-						<li><a href="http://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
+						<li><a href="https://www.twitter.com/justinbeckwith" class="twitter" title="Follow Us on Twitter!"></a></li>
 					</ul>
 				</div>
 				<div style="clear:both"></div>
 			</div>
 		</div>
-
 		<div class="nav-wrapper">
 			<nav>
 				<ul>
 					<li><a href="/">Blog</a></li>
 					<li><a href="/about/">About</a></li>
-					<li><a href="http://github.com/JustinBeckwith/">Code</a></li>
-					<li><a href="http://twitter.com/JustinBeckwith">Twitter</a></li>
-					<li><a href="http://www.linkedin.com/in/beckwith">LinkedIn</a></li>
+					<li><a href="https://github.com/JustinBeckwith/">Code</a></li>
+					<li><a href="https://twitter.com/JustinBeckwith">Twitter</a></li>
+					<li><a href="https://www.linkedin.com/in/beckwith">LinkedIn</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -46,10 +45,8 @@
 		</div>
 		<footer>
 			<div>Note: Opinions expressed are solely my own and do not express the views or opinions of Microsoft or Google.</div>
-			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="http://jbeckwith.com">Justin Beckwith</a></div>
+			<div>&copy; Copyright {{ site.time| date:"%Y" }}, <a href="https://jbeckwith.com">Justin Beckwith</a></div>
 		</footer>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54d6a7e972035c38" async="async"></script>
-
 		<script type="text/javascript">
 			var disqus_shortname = '53bytes';
 			(function() {
