--- a/_includes/post-details.html
+++ b/_includes/post-details.html
@@ -3,7 +3,7 @@
 		{{ post.date | date_to_long_string }}
 	</span>
 	<span class="posted-under">
-		Posted Under: <a href="/archive/#{{page.category}}">{{ post.category }}</a>
+		Posted Under: <a href="/archive/#{{post.category}}" title="Page Category: {{post.category}}">{{ post.category }}</a>
 	</span>
 	<span>
 		<a href="{{post.url}}#disqus_thread">[0] comments</a>
