--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{{ page.title }} // Justin Beckwith</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+		<meta name="Description" content="The writings and musings of Justin Beckwith.  A lot of node.js, some management, and a few things inbetween.">
 		<link rel="alternate" type="application/rss+xml" title="Justin Beckwith" href="feed/" />
 		<link rel="stylesheet" href="/css/site.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
