--- a/css/site.css
+++ b/css/site.css
@@ -123,6 +123,7 @@ nav {
 nav ul {
 	list-style-type: none;
 	margin-left: 0px;
+	padding-left: 0px;
 	margin: 0px;
 }
 
@@ -207,7 +208,8 @@ nav ul li a:hover {
 @media(max-width: 978px) {
 	.link-wrapper {
 		width: 100%;
-		position: relative;
+		display: flex;
+  	justify-content: center;
 	}
 
 	.logo-title {
@@ -216,17 +218,9 @@ nav ul li a:hover {
 		margin-left: 0px;
 	}
 
-	.logo ul {
-		float: left;
-    	margin-right:  auto;
-    	margin-left: auto;
-    	position: relative;
-    	left: 50%;
-	}
-
-	.logo ul li {
-		position: relative;
-		right: 50%;
+	.link-wrapper ul {
+		padding-left: 0px;
+		padding-right: 0px;
 	}
 
 	.logo img {
@@ -441,21 +435,6 @@ ul.posts span {
 	margin-left: 20px;
 }
 
-.social {
-	margin-bottom: 10px;
-}
-
-.social > div {
-	float: left;
-	vertical-align: middle;
-	width: 100px;
-}
-
-#content .social img {
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
-
 .embed-container {
 	position: relative;
 	padding-bottom: 56.25%;
@@ -474,10 +453,6 @@ ul.posts span {
 	left: 0;
 	width: 100%;
 	height: 100%;
-}
-
-.addthis_sharing_toolbox {
-	float:left;
 }
 
 .comment-count {
@@ -537,17 +512,18 @@ figure pre {
 	line-height: 1.4;
 }
 
-#social ul {
+.social ul {
 	margin: 0px;
 	padding: 0px;
+	float: left;
 }
 
-#social ul li {
+.social ul li {
 	list-style-type: none;
 	display: inline-block;
 }
 
-#social ul li svg {
+.social ul li svg {
 	width: 25px;
 	height: 25px;
 	padding: 6px;
